# chat-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.test.yml  docker-compose.yml  flake.nix  test.sh
auth/: Cargo.toml
auth/src/: authenticator.rs  lib.rs
auth/src/jwt/: claims.rs  errors.rs  handler.rs  mod.rs
auth/src/password/: argon2.rs  errors.rs  mod.rs
chat-service/: Cargo.toml  Dockerfile  build.rs
chat-service/.sqlx/: query-21dc60e31808fddb0a51ed3b61cffbe13c21e18f1fad3fb2f6a01e9e37306bd6.json  query-2628cf6f537e9131fbf8080bd38576773772f180859494c166387e8f3a2c574c.json  query-938f9ab233e4b94254e7e5e547f124cc07d23dddac3a7d43f67e64bd6b10d36b.json  query-b281c7e04b3d49d9e288492907c25d74c89e3a02bac967c0c30d56c0c441fe74.json
chat-service/config/: development.toml  docker.toml
chat-service/migrations/: 20251031055140_create_channels.sql  20251117000001_create_user_replica.sql
chat-service/src/lib/: config.rs  lib.rs
chat-service/src/lib/domain/: errors.rs  events.rs  mod.rs
chat-service/src/lib/domain/channel/: errors.rs  events.rs  models.rs  ports.rs  service.rs
chat-service/src/lib/domain/message/: errors.rs  events.rs  models.rs  ports.rs  service.rs
chat-service/src/lib/domain/user/: errors.rs  events.rs  mod.rs  models.rs  ports.rs
chat-service/src/lib/inbound/: middleware.rs  mod.rs
chat-service/src/lib/inbound/http/: handlers.rs  messages.rs  mod.rs  router.rs
chat-service/src/lib/inbound/http/handlers/channels/: create_channel.rs  get_channel.rs  list_public_channels.rs  mod.rs
chat-service/src/lib/inbound/http/handlers/messages/: get_channel_messages.rs  mod.rs
chat-service/src/lib/inbound/websocket/: handler.rs  messages.rs  mod.rs  registry.rs
chat-service/src/lib/outbound/: mod.rs
chat-service/src/lib/outbound/events/: consumer.rs  message_publisher.rs  messages.rs  mod.rs  producer.rs  topic.rs  user_consumer.rs
chat-service/src/lib/outbound/grpc/grpc/: mod.rs  user.rs
chat-service/src/lib/outbound/repositories/: channel.rs  message.rs  mod.rs  user_replica.rs
chat-service/tests/: channel_tests.rs  kafka_tests.rs  message_tests.rs  user_replica_tests.rs
chat-service/tests/common/: mod.rs
docker/postgres/: init-databases.sql
openapi/: chat-service.yaml  user-service.yaml
proto/: user.proto
sequence/puml/: channel-creation.puml  message-broadcast.puml  theme.puml  user-event-sync.puml  user-registration.puml
user-service/: Cargo.toml  Dockerfile  build.rs
user-service/.sqlx/: query-3190a0973220a336ffc610b4b19b7b305ed346fefcba9c73ae9277a7fb8bb3db.json  query-3a1b3513b7013714906d02702da8de2d3b243be7197c2c06896d70d4aab95bc3.json  query-436221c5656aeeabc23be2c8e4e3c56e344028c7d750025326f19a603390697b.json  query-77a8153ec36bfc4be42a8fb8db4c38e45a605d6db3888897ee9a64da72d33a2c.json  query-7ccbb7c4b1b00c9cf3aa31290237469a20f1168b78e296c21d0939f4ee83ff70.json  query-a40dae493fc2238be8a7a2d7480e3615ae23643019846f2b3b4a6489f8f8b691.json  query-a7191f354ce1a66c67326c2b461158b3cd72bed1f414ff98a47c4fb155a88a36.json
user-service/config/: development.toml  docker.toml  test.toml
user-service/migrations/: 20251031055133_create_users.sql
user-service/src/lib/: config.rs  lib.rs
user-service/src/lib/domain/user/: errors.rs  events.rs  mod.rs  models.rs  ports.rs  service.rs
user-service/src/lib/inbound/grpc/: grpc_user_server.rs  handlers.rs  mod.rs
user-service/src/lib/inbound/grpc/handlers/: get_user.rs
user-service/src/lib/inbound/http/: handlers.rs  middleware.rs  mod.rs  router.rs
user-service/src/lib/inbound/http/handlers/: authenticate.rs  create_user.rs  delete_user.rs  get_user.rs  update_user.rs
user-service/src/lib/outbound/: mod.rs
user-service/src/lib/outbound/events/: messages.rs  mod.rs  producer.rs
user-service/src/lib/outbound/repositories/: user.rs
user-service/tests/: api_tests.rs
user-service/tests/common/: mod.rs
