[workspace]
resolver = "2"
members = ["auth", "user-service", "chat-service"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ndibernardo"]

[workspace.dependencies]
# gRPC and Protocol Buffers
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - PostgreSQL
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Database - Cassandra
scylla = { version = "0.12", features = ["ssl", "chrono"] }

# Types
uuid = { version = "1.6", features = ["v1", "v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Email
email_address = "0.2.4"

# Async trait
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Password hashing
argon2 = "0.5"

# JWT for auth
jsonwebtoken = "9"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }
